# pythonchik

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml  pyrightconfig.json  pythonchik.spec
.devcontainer/: devcontainer.json
docs/: DEVELOPMENT.md  README.md
examples/: complex_example.py  example_background_image.py  image_example.py  modern_ui_example.py  scrollable_frame_example.py  simple_example.py
pythonchik/: __init__.py  config.py  image_processor.py  logging.py  main.py  services.py  types.py  ui.py
pythonchik/business/: __init__.py
pythonchik/core/: __init__.py  application_core.py  application_state.py
pythonchik/errors/: __init__.py  error_context.py  error_handlers.py
pythonchik/events/: __init__.py  eventbus.py  events.py  handlers.py  ui_events.py
pythonchik/legacy/: main_original.py
pythonchik/models/: __init__.py
pythonchik/ui/: __init__.py  app.py  core.py  events.py
pythonchik/utils/: __init__.py  error_context.py  error_handler.py  event_handlers.py  event_system.py  image.py  logging_config.py  metrics.py  settings.py
tests/: __init__.py  test_app.py  test_core.py  test_error_handlers.py  test_event_system.py  test_images.py  test_log.py  test_logging.py  test_services.py  test_services.py.bak  test_services2.py  test_services2.py.bak  test_services3.py  test_settings.py  test_state.py  test_stress.py  test_utils.py
tests/core/: __init__.py  test_application_core.py  test_core.py  test_state.py
tests/test_data/: __init__.py  complex_sample.json  edge_cases.json  empty_and_special.json  (+5 more)
(+11 files in other folders)
